# cargo-commitlint

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ai.txt  commitlint.example.toml  llms.txt
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.cursor/rules/: auto-commit.mdc  git-flow.mdc  no-unnecessary-markdown.mdc  rust-best-practices.mdc
.github/: SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  docs.yml  release.yml  stale.yml
docs/: .gitignore  angular.json  package.json  pnpm-lock.yaml
docs/public/: .htaccess  robots.txt  sitemap.xml
docs/src/: index.html  styles.css
docs/src/app/: app.config.ts  app.css  app.html  app.routes.ts  app.ts
docs/src/app/pages/: api-reference.component.ts  configuration.component.ts  contributing.component.ts  conventional-commits.component.ts  examples.component.ts  getting-started.component.ts  home.component.ts
docs/src/app/services/: seo.service.ts
src/: commit.rs  config.rs  hook.rs  main.rs  validator.rs
