[package]
name = "cargo-commitlint"
version = "1.0.0"
edition = "2021"
authors = ["Pegasus Heavy Industries"]
description = "A Rust-based commit message linter following Conventional Commits specification"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pegasusheavy/cargo-commitlint"
homepage = "https://pegasusheavy.github.io/cargo-commitlint"
documentation = "https://pegasusheavy.github.io/cargo-commitlint"
readme = "README.md"
keywords = [
    "commitlint",
    "conventional-commits",
    "git",
    "git-hooks",
    "commit-message",
    "linting",
    "cargo-subcommand",
    "rust-tooling",
    "code-quality",
]
categories = [
    "development-tools",
    "command-line-utilities",
]
exclude = [
    "/.github",
    "/.cargo-husky",
    "/.cursor",
    "/docs",
    "/.gitignore",
    "*.md",
    "!README.md",
    "/commitlint.example.toml",
    "/llms.txt",
    "/ai.txt",
]

[[bin]]
name = "cargo-commitlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
which = "6.0"

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks", "precommit-hook", "prepush-hook"] }
